--- a/_assets/_css/root-system.css
+++ b/_assets/_css/root-system.css
@@ -560,86 +560,6 @@ ul.circle.black li::before {
 }
 
 
-
-
-
-/* Style the FAQ items */
-.faq-item {
-  margin-bottom: 20px;
-}
-
-/* Hide the checkbox inputs */
-.faq-toggle {
-  display: none;
-}
-
-/* Style the question labels */
-.faq-question {
-  background-color: var(--col-pri-black);
-  border: 1px solid var(--col-pri-white);
-  border-top:0;
-  border-left:0;
-  border-right:0;
-  color: var(--col-pri-white);
-  padding: 20px;
-  text-align: left;
-  cursor: pointer;
-  position: relative;
-  transition: background-color 0.3s ease-in-out;
-  font-size: var(--type-xxxs);
-  font-family: var(--txt-bold);
-  user-select: none; /* Make the text non-selectable */
-}
-
-/* Style the plus/minus icons */
-.faq-question::before {
-  content: ''; /* Remove the text content */
-    position: absolute;
-    top: 50%; /* Vertically center the icon */
-    right: 20px;
-    transform: translateY(-50%); /* Vertically centering transform */
-    width: 16px; /* Adjust the width and height based on your SVG size */
-    height: 16px;
-    background-repeat: no-repeat;
-    background-size: contain;
-
-  /* Set the background image for the plus sign */
-  background-image: url('../_images/faq-plus.svg'); /* Replace with your SVG path */
-
-  transition: content 0.3s ease-in-out;
-}
-
-/* Add styles for the expanded state */
-.faq-toggle:checked + .faq-question {
-  background-color: var(--col-pri-black);
-  border: 1px solid var(--col-pri-white);
-  border-top:0;
-  border-left:0;
-  border-right:0;
-  color: var(--col-pri-white);
-}
-
-/* Add styles for the expanded state */
-.faq-toggle:checked + .faq-question::before {
-  /* Set the background image for the minus sign */
-  background-image: url('../_images/faq-minus.svg'); /* Replace with your SVG path */
-}
-
-/* Style the answer (initially hidden) */
-.faq-answer {
-  max-height: 0;
-  overflow: hidden;
-  padding: 0 20px;
-  opacity: 0;
-  transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out, padding 0.3s ease-in-out;
-  font-size: var(--type-tiny);
-  line-height: 1.4em;
-  font-family: var(--txt-standard);
-}
-
-/* Toggle the answer visibility when the label is clicked */
-.faq-toggle:checked + .faq-question + .faq-answer {
-  max-height: 1000px;
-  opacity: 1;
-  padding: 20px;
+address {
+  font-style: normal;
 }
